fix dark mode 2

--- a/src/pages/indexComponents/assist/styles.module.css
+++ b/src/pages/indexComponents/assist/styles.module.css
@@ -33,6 +33,11 @@ html[data-theme=dark]
 }
 
 .container_grey{
+  background-color: #f1f1f1;
+}
+
+html[data-theme=dark]
+.container_grey{
   background-color: #d6d5c9;
 }
 
