--- a/src/pages/indexComponents/herbsCli/styles.module.css
+++ b/src/pages/indexComponents/herbsCli/styles.module.css
@@ -31,6 +31,12 @@ html[data-theme=dark]
 .container {
   color: #37362b;
 }
+
+.container_grey{
+  background-color: #f1f1f1;
+}
+
+html[data-theme=dark]
 .container_grey{
   background-color: #d6d5c9;
 }
